[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "formseal-embed"
version = "0.0.0"
description = "Encrypted contact form that never exposes plaintext to your server"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    {name = "grayguava"}
]

[project.scripts]
fse = "fse.fse:main"

[tool.setuptools]
packages = [
    "fse",
    "fse.cli",
    "fse.cli.commands",
    "fse.cli.commands.general",
    "fse.cli.general",
    "fse.cli.ui",
]

[tool.setuptools.package-data]
fse = ["src/**"]